--- a/public/themes/viva-light/theme.css
+++ b/public/themes/viva-light/theme.css
@@ -2372,6 +2372,9 @@
   font-size: 1.25rem;
   padding: 0.625rem 1.25rem;
 }
+.p-splitbutton.p-button-lg > .p-button.p-button-icon-only {
+  width: auto;
+}
 .p-splitbutton.p-button-lg > .p-button .p-button-icon {
   font-size: 1.25rem;
 }
