Fixes incorrect background color

--- a/public/themes/tailwind-light/theme.css
+++ b/public/themes/tailwind-light/theme.css
@@ -5383,7 +5383,7 @@
   color: #D97706;
 }
 .p-inline-message.p-inline-message-error {
-  background: #FEF3C7;
+  background: #FFE7E6;
   border: none;
   border-width: 0px;
   color: #DC2626;
@@ -5461,7 +5461,7 @@
   color: #D97706;
 }
 .p-message.p-message-error {
-  background: #FEF3C7;
+  background: #FFE7E6;
   border: none;
   border-width: 0 0 0 6px;
   color: #DC2626;
@@ -5559,7 +5559,7 @@
   color: #D97706;
 }
 .p-toast .p-toast-message.p-toast-message-error {
-  background: #FEF3C7;
+  background: #FFE7E6;
   border: none;
   border-width: 0 0 0 6px;
   color: #DC2626;
