--- a/assets/styles/primevue.css
+++ b/assets/styles/primevue.css
@@ -1,1 +1,3 @@
-/* primevue styles */
+/**
+ * The primevue[.min].css has been deprecated. In order not to break existing projects, it is currently included in the build as an empty file.
+ */
