--- a/public/themes/bootstrap4-light-purple/theme.css
+++ b/public/themes/bootstrap4-light-purple/theme.css
@@ -5951,4 +5951,9 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+/* Vendor extensions to the designer enhanced bootstrap compatibility */
+.fc.fc-theme-standard .fc-highlight {
+  background: #e7d8ef;
+}
+
 /* Customizations to the designer theme should be defined here */
