--- a/public/themes/arya-purple/theme.css
+++ b/public/themes/arya-purple/theme.css
@@ -4382,6 +4382,10 @@
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
 }
+.p-fileupload .p-fileupload-content.p-fileupload-highlight {
+  border: 1px dashed #BA68C8;
+  background-color: rgba(186, 104, 200, 0.16);
+}
 .p-fileupload .p-fileupload-file {
   padding: 1rem;
   border: 1px solid #383838;
