--- a/public/themes/bootstrap4-dark-purple/theme.css
+++ b/public/themes/bootstrap4-dark-purple/theme.css
@@ -4394,6 +4394,10 @@
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
+.p-fileupload .p-fileupload-content.p-fileupload-highlight {
+  border: 1px dashed #c298d8;
+  background-color: #c298d8;
+}
 .p-fileupload .p-fileupload-file {
   padding: 1rem;
   border: 1px solid #3f4b5b;
@@ -5959,15 +5963,12 @@
 }
 
 /* Vendor extensions to the designer enhanced bootstrap compatibility */
-.p-breadcrumb .p-breadcrumb-chevron {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-.p-breadcrumb .p-breadcrumb-chevron:before {
-  content: "/";
-}
-
 .fc.fc-theme-standard .fc-highlight {
   background: #614c6c;
+}
+
+.p-fileupload .p-fileupload-content.p-fileupload-highlight {
+  background-color: #614c6c;
 }
 
 /* Customizations to the designer theme should be defined here */
