--- a/public/themes/fluent-light/theme.css
+++ b/public/themes/fluent-light/theme.css
@@ -4357,6 +4357,10 @@
   border-bottom-right-radius: 2px;
   border-bottom-left-radius: 2px;
 }
+.p-fileupload .p-fileupload-content.p-fileupload-highlight {
+  border: 1px dashed #0078d4;
+  background-color: #edebe9;
+}
 .p-fileupload .p-fileupload-file {
   padding: 1rem;
   border: 1px solid #edebe9;
