--- a/public/themes/luna-green/theme.css
+++ b/public/themes/luna-green/theme.css
@@ -4369,6 +4369,10 @@
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
 }
+.p-fileupload .p-fileupload-content.p-fileupload-highlight {
+  border: 1px dashed #C5E1A5;
+  background-color: #C5E1A5;
+}
 .p-fileupload .p-fileupload-file {
   padding: 1rem;
   border: 1px solid #4b4b4b;
