--- a/public/themes/mdc-light-deeppurple/theme.css
+++ b/public/themes/mdc-light-deeppurple/theme.css
@@ -4406,6 +4406,10 @@
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
+.p-fileupload .p-fileupload-content.p-fileupload-highlight {
+  border: 1px dashed #673AB7;
+  background-color: rgba(103, 58, 183, 0.12);
+}
 .p-fileupload .p-fileupload-file {
   padding: 1rem;
   border: 1px solid rgba(0, 0, 0, 0.12);
