--- a/public/themes/mira/theme.css
+++ b/public/themes/mira/theme.css
@@ -4410,6 +4410,10 @@
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
+.p-fileupload .p-fileupload-content.p-fileupload-highlight {
+  border: 1px dashed #5E81AC;
+  background-color: #D8DEE9;
+}
 .p-fileupload .p-fileupload-file {
   padding: 1rem;
   border: 1px solid #E5E9F0;
