--- a/public/themes/rhea/theme.css
+++ b/public/themes/rhea/theme.css
@@ -4357,6 +4357,10 @@
   border-bottom-right-radius: 2px;
   border-bottom-left-radius: 2px;
 }
+.p-fileupload .p-fileupload-content.p-fileupload-highlight {
+  border: 1px dashed #7B95A3;
+  background-color: #AFD3C8;
+}
 .p-fileupload .p-fileupload-file {
   padding: 1rem;
   border: 1px solid #dadada;
