--- a/public/themes/saga-green/theme.css
+++ b/public/themes/saga-green/theme.css
@@ -4382,6 +4382,10 @@
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
 }
+.p-fileupload .p-fileupload-content.p-fileupload-highlight {
+  border: 1px dashed #4CAF50;
+  background-color: #E8F5E9;
+}
 .p-fileupload .p-fileupload-file {
   padding: 1rem;
   border: 1px solid #dee2e6;
