--- a/public/themes/soho-light/theme.css
+++ b/public/themes/soho-light/theme.css
@@ -4381,6 +4381,10 @@
   border-bottom-right-radius: 6px;
   border-bottom-left-radius: 6px;
 }
+.p-fileupload .p-fileupload-content.p-fileupload-highlight {
+  border: 1px dashed #7254f3;
+  background-color: #e2dcfc;
+}
 .p-fileupload .p-fileupload-file {
   padding: 1rem;
   border: 1px solid #dfe7ef;
