--- a/public/themes/viva-light/theme.css
+++ b/public/themes/viva-light/theme.css
@@ -4414,6 +4414,10 @@
   border-bottom-right-radius: 6px;
   border-bottom-left-radius: 6px;
 }
+.p-fileupload .p-fileupload-content.p-fileupload-highlight {
+  border: 2px solid #ebebeb dashed #5472d4;
+  background-color: #ced6f1;
+}
 .p-fileupload .p-fileupload-file {
   padding: 1rem;
   border: 1px solid #ebebeb;
