Doc emit color changes

--- a/assets/styles/layout/_doc.scss
+++ b/assets/styles/layout/_doc.scss
@@ -331,6 +331,10 @@
                     }
                 }
             }
+
+            .doc-option-link {
+                color: var(--primary-color);
+            }
         }
     }
 }
