--- a/assets/styles/layout/_doc.scss
+++ b/assets/styles/layout/_doc.scss
@@ -12,6 +12,7 @@
 
         button {
             background-color: transparent;
+            font-family: var(--font-family);
             border: 0 none;
             display: block;
             padding: 1rem 2rem;
