--- a/public/themes/nano/theme.css
+++ b/public/themes/nano/theme.css
@@ -333,6 +333,12 @@
 .p-calendar.p-invalid.p-component > .p-inputtext {
   border-color: #d8222f;
 }
+.p-calendar:not(.p-calendar-disabled).p-focus > .p-inputtext {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 0.2rem #90c9f5;
+  border-color: #1174c0;
+}
 
 .p-datepicker {
   padding: 0.25rem;
