--- a/public/themes/rhea/theme.css
+++ b/public/themes/rhea/theme.css
@@ -333,6 +333,12 @@
 .p-calendar.p-invalid.p-component > .p-inputtext {
   border-color: #e7a3a3;
 }
+.p-calendar:not(.p-calendar-disabled).p-focus > .p-inputtext {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 0.2rem #e4e9ec;
+  border-color: #7B95A3;
+}
 
 .p-datepicker {
   padding: 0.857rem;
