--- a/public/themes/soho-light/theme.css
+++ b/public/themes/soho-light/theme.css
@@ -357,6 +357,12 @@
 .p-calendar.p-invalid.p-component > .p-inputtext {
   border-color: #ff6767;
 }
+.p-calendar:not(.p-calendar-disabled).p-focus > .p-inputtext {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 1px #c7bbfa;
+  border-color: #7254f3;
+}
 
 .p-datepicker {
   padding: 0.5rem;
