--- a/public/themes/viva-light/theme.css
+++ b/public/themes/viva-light/theme.css
@@ -365,6 +365,12 @@
 .p-calendar.p-invalid.p-component > .p-inputtext {
   border-color: #f88c79;
 }
+.p-calendar:not(.p-calendar-disabled).p-focus > .p-inputtext {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 0.1rem #bbc7ee;
+  border-color: #91a4e3;
+}
 
 .p-datepicker {
   padding: 0.5rem;
