--- a/assets/styles/layout/_doc.scss
+++ b/assets/styles/layout/_doc.scss
@@ -303,14 +303,14 @@
 
             .doc-option-name,
             > i:not(.pi) {
-                font-family: Inter, sans-serif;;
+                font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, Liberation Mono, monospace;
                 position: relative;
                 scroll-margin-top: 6.5rem;
                 background-color: var(--highlight-bg);
                 color: var(--highlight-text-color);
                 border-radius: 6px;
                 padding: 2px 6px;
-                font-weight: 600;
+                font-weight: 400;
                 font-style: normal;
 
                 .doc-option-link {
