--- a/public/themes/mira/theme.css
+++ b/public/themes/mira/theme.css
@@ -1,6 +1,6 @@
 :root {
-  font-family: Inter, sans-serif;
-  --font-family:Inter, sans-serif;
+  font-family: "Inter", sans-serif;
+  --font-family:"Inter", sans-serif;
   --surface-a:#ffffff;
   --surface-b:#ECEFF4;
   --surface-c:#D8DEE9;
